discussion/kv_engine/168378/168378_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50286: Handle pre-7.1 CommitSyncWrite metadata

Prior to MB-48033 (Neo), CommittedSyncWrites were stored on-disk as
queue_op::commit_sync_write and V3 metadata. However this was
optimized in MB-48033 to store ad queue_op::mutation and V1 metadata
(as V1 is smaller).

However, we did not fully handle reading existing V3 commit_sync_write
from disk - for example during an offline upgrade. As a consequence
attempting to read such items from disk (for example during warmup)
results in a failure to make an Item:

     CRITICAL (b1) WarmupBackfillTask::run(): caught exception while running backfill - aborting warmup: makeItemFromDocInfo: Invalid queue_op:mutation

This is because while we allow the V3::commit_sync_write to be decoded
from disk in MetaData::MetaDataV3, we transparently convert the Commit
operation to mutation:

    queue_op getDurabilityOp() const {
        switch (operation) {
        ...
        case Operation::Commit:
            return queue_op::mutation;

Logically this is fine, however that falls foul of the logic in
makeItemFromDocInfo() which attempts to extract durabiliuty-related
information from V3 metadata, and doesn't exist to encounter a
queue_op::mutation (as per the above exception).

Address by accepting queue_op::mutation as a valid V3 durability op.

Change-Id: I16d2bd4891e232585630ff97b1052c10541bbfba

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-10 09:49:19.000000000
Message: 
Patch Set 4: Patch Set 3 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-10 10:15:43.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14698/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.h:28:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14698/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.h:28:10:
error: "spdlog/common.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14698/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36155/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13529/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42664/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4340/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15500/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16350/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16645/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24765/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4396/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17438/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-10 11:19:08.000000000
Message: 
Patch Set 4: Verified+1

Overriding Build Bot as the clang-tidy failure is due to a known issue when locating spdlog headers (MB-46631).
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-10 11:19:10.000000000
Message: 
Removed Code-Review-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-10 11:19:11.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-01-10 11:26:10.000000000
Message: 
Patch Set 4: Code-Review+1

(3 comments)
Line:11, /COMMIT_MSG -> nit: a?

Line:32, /COMMIT_MSG -> nit: durability

Line:1613, engines/ep/tests/module_tests/couch-kvstore_test.cc -> Can you not just use the enum value?

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-10 11:49:52.000000000
MISMATCHED INLINE COMMENT
Line:11, /COMMIT_MSG -> Ack
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-10 11:49:52.000000000
MISMATCHED INLINE COMMENT
Line:32, /COMMIT_MSG -> Ack
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-10 11:49:52.000000000
MISMATCHED INLINE COMMENT
Line:1613, engines/ep/tests/module_tests/couch-kvstore_test.cc -> No, as it's a private member of MetaDataV3. Given this is test code I didn't think it was appropriate to increase the visibility of what is essentially an implementation detail.
----------------------------------------------------------------------------------------------------------------------
